# time-series-analysis

./: .gitignore  pyproject.toml
electricity-consumption/: .gitignore  comed.ipynb  commonweallth_edison_dl.ipynb  commonwealth_edison_ml.ipynb  commonwealth_edison_stats.ipynb
exam/: exam.ipynb  prison.csv  temperature.csv
food-manufacturing/: classwork.ipynb  train.csv
ice-cream/: classwork.ipynb  ice-cream-train.csv
machine-learning/: tree.ipynb
multivariate-timeseries/: m3.ipynb
no-business-applications/: classwork.ipynb  cw-business-applications.csv
tsa-basics/: arima.ipynb  autocorrelation_and_stationary.ipynb  ets.ipynb  forecasting_baselines.ipynb  statistical_tests.ipynb  stl_decomposition.ipynb
yahoo-finance-msft/: msft-closing-prices-forecasting.ipynb  template.ipynb
