[project]
name = "time-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "yfinance>=1.1.0",
]
