[project]
name = "time-series"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "yfinance>=1.1.0",
]
